More responsiveness fixes, search bar on mobile

--- a/source/css/_partial/article.styl
+++ b/source/css/_partial/article.styl
@@ -505,7 +505,9 @@ figure.article-gallery
   @media mq-larger
     width: 288px
   @media mq-smaller
-    width: 25%
+    width: 28%
+  @media mq-smallest
+    width: 26%
 
 .toc-title
   &:before
@@ -514,9 +516,9 @@ figure.article-gallery
     margin-right: .5em
   font-family: Oswald, "Microsoft Yahei", Arial, Helvetica, sans-serif
 
-.nav
-  padding 0
-  margin 1em 0 0 1em
+ol.nav
+  border-top: 1px solid #333
+  padding 1em 0 0 1em
   line-height 1.8em
   li
   list-style-type none
